Modified Open VM Tools README

--- a/open-vm-tools/README
+++ b/open-vm-tools/README
@@ -7,5 +7,7 @@ VMware supported Unix like guest operating systems.
 Project Page: https://github.com/vmware/open-vm-tools 
 
 Patched lib/wiper/wiperPosix.c to include sys/sysmacros.h for 
-compatibility with glibc-2.25 and above. NO PAM OR VGAUTH SUPPORT 
+compatibility with glibc-2.25 and above.
+
+NO PAM OR VGAUTH SUPPORT 
 
